@@ -7,7 +7,7 @@ import java.util.stream.Stream;
 
 import com.google.common.base.Preconditions;
 
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.resources.Identifier;
 import net.minecraft.server.packs.resources.Resource;
 import net.minecraft.server.packs.resources.ResourceManager;
 
@@ -15,13 +15,13 @@ public class AlternativesFileToIdConverter {
 	private final String prefix;
 	private final List<String> extensions;
 	private final int sameExtensionLength;
-	private Predicate<ResourceLocation> listFilter;
+	private Predicate<Identifier> listFilter;
 
 	public AlternativesFileToIdConverter(String pPrefix, List<String> pExtensions) {
-		this(pPrefix, pExtensions, $ -> true);
+		this(pPrefix, pExtensions, _ -> true);
 	}
 
-	public AlternativesFileToIdConverter(String pPrefix, List<String> pExtensions, Predicate<ResourceLocation> listFilter) {
+	public AlternativesFileToIdConverter(String pPrefix, List<String> pExtensions, Predicate<Identifier> listFilter) {
 		this.prefix = pPrefix;
 		this.extensions = pExtensions;
 		sameExtensionLength = pExtensions.stream().mapToInt(String::length).distinct().reduce((a, b) -> -1).orElseThrow();
@@ -29,7 +29,7 @@ public class AlternativesFileToIdConverter {
 		this.listFilter = listFilter;
 	}
 
-	public AlternativesFileToIdConverter setListFilter(Predicate<ResourceLocation> listFilter) {
+	public AlternativesFileToIdConverter setListFilter(Predicate<Identifier> listFilter) {
 		this.listFilter = listFilter;
 		return this;
 	}
@@ -38,38 +38,38 @@ public class AlternativesFileToIdConverter {
 		return new AlternativesFileToIdConverter(pName, List.of(".yaml", ".json"));
 	}
 
-	public ResourceLocation idToFile(ResourceLocation pId) {
-		return pId.withPath(this.prefix + "/" + pId.getPath() + extensions.get(0));
+	public Identifier idToFile(Identifier pId) {
+		return pId.withPath(prefix + "/" + pId.getPath() + extensions.getFirst());
 	}
 
-	public Stream<ResourceLocation> idToAllPossibleFiles(ResourceLocation pId) {
-		return extensions.stream().map((ext) -> pId.withPath(this.prefix + "/" + pId.getPath() + ext));
+	public Stream<Identifier> idToAllPossibleFiles(Identifier pId) {
+		return extensions.stream().map((ext) -> pId.withPath(prefix + "/" + pId.getPath() + ext));
 	}
 
-	public ResourceLocation fileToId(ResourceLocation pFile) {
+	public Identifier fileToId(Identifier pFile) {
 		if (sameExtensionLength >= 0) {
 			String s = pFile.getPath();
-			return pFile.withPath(s.substring(this.prefix.length() + 1, s.length() - sameExtensionLength));
+			return pFile.withPath(s.substring(prefix.length() + 1, s.length() - sameExtensionLength));
 		} else {
 			for (String ext : extensions) {
 				if (pFile.getPath().endsWith(ext)) {
 					String s = pFile.getPath();
-					return pFile.withPath(s.substring(this.prefix.length() + 1, s.length() - ext.length()));
+					return pFile.withPath(s.substring(prefix.length() + 1, s.length() - ext.length()));
 				}
 			}
 			throw new IllegalArgumentException("Unknown extension for " + pFile);
 		}
 	}
 
-	public Map<ResourceLocation, Resource> listMatchingResources(ResourceManager pResourceManager) {
-		return pResourceManager.listResources(this.prefix, (location) -> {
-			return this.extensions.stream().anyMatch(location.getPath()::endsWith) && listFilter.test(location);
-		});
+	public Map<Identifier, Resource> listMatchingResources(ResourceManager pResourceManager) {
+		return pResourceManager.listResources(
+				prefix,
+				location -> extensions.stream().anyMatch(location.getPath()::endsWith) && listFilter.test(location));
 	}
 
-	public Map<ResourceLocation, List<Resource>> listMatchingResourceStacks(ResourceManager pResourceManager) {
-		return pResourceManager.listResourceStacks(this.prefix, (location) -> {
-			return this.extensions.stream().anyMatch(location.getPath()::endsWith) && listFilter.test(location);
-		});
+	public Map<Identifier, List<Resource>> listMatchingResourceStacks(ResourceManager pResourceManager) {
+		return pResourceManager.listResourceStacks(
+				prefix,
+				location -> extensions.stream().anyMatch(location.getPath()::endsWith) && listFilter.test(location));
 	}
 }
